@@ -10,6 +10,7 @@
 - Bug 2909463: Fix Xcode handling of Obj-C++ .mm files
 - Bug 2903430: Using relative instead of absolute paths with $() macro
 - Bug 2910691: Duplicate build options
+- Bug 2910639: Nil reference on dylib project dependency
 
 
 -------
